syntax = "proto3";

package gnoi.sonic;

//option (types.gnoi_version) = "0.1.0";

service SonicService {
  rpc ShowTechsupport (TechsupportRequest) returns (TechsupportResponse) {}
  rpc Sum (SumRequest) returns (SumResponse) {}
}

message TechsupportRequest {
    message Input {
        string date = 1;
    }
    Input input = 1;
}
message TechsupportResponse {
    message Output {
        string output_filename = 1;
    }
    Output output = 1;
}


message SumRequest {
    message Input {
        int32 left = 1;
        int32 right = 2;
    }
    Input input = 1;
}
message SumResponse {
    message Output {
        int32 result = 1;
    }
    Output output = 1;
}